<resources>
    <string name="app_name">Meu Portifólio</string>
    <string name="nome">Piter Capistrano</string>
    <string name="descricao">
         <font color='#000000'> Sou um desenvolvedor software com habilidades sólidas em desenvolvimento Android,
        especializado no uso de Kotlin, Java e Kotlin Compose Multiplatform. Tenho experiência em
        projetar e implementar interfaces de usuário utilizando Jetpack Compose e XML, além de
        integrar APIs para fornecer funcionalidades complexas, como atualizações em tempo real e
        autenticação de usuários. Estou atualmente cursando para adquirir o bacharelado em
        Engenharia de Software, e possuo diversas certificações em tecnologias relevantes e
             metodologias ágeis.\n\n\n </font>

        <b><font color='#000000'>Habilidades:</font></b>\n\n

        <b><font color='#ff0000'> Desenvolvimento Android:</font></b> <font color='#000000'>Especialista em Kotlin, possui uma profunda compreensão do
        desenvolvimento Android nativo, entregando aplicativos robustos e eficientes.\n\n</font>

        <b><font color='#ff0000'>Arquitetura de Software:</font></b> <font color='#000000'>Experiente na implementação de arquiteturas modernas como MVVM,
        Clean Architecture e Jetpack Compose, garantindo código modular e de fácil manutenção.\n\n</font>

        <b><font color='#ff0000'>Testes Automatizados:</font></b> <font color='#000000'>Firme defensor da qualidade do software, implementando testes
        automatizados de unidade e UI para garantir a estabilidade e a confiabilidade de cada
        aplicativo.\n\n</font>

    </string>

    <string name="txt_bt_projetos">Projetos</string>
    <string name="txt_bt_contato">Contato</string>
    <string name="txt_telefone">+55(11)98273–1114</string>
    <string name="txt_email">pitercapistrano@gmail.com</string>
    <string name="txt_github">https://github.com/PiterCapistrano</string>
    <string name="txt_linkedin">www.linkedin.com/in/piter-capistrano-on</string>
    <string name="txt_fpcalculator">Aplicativo F.P.Calculator</string>
    <string name="txt_loja_virtual">Aplicativo Loja Virtual</string>
    <string name="txt_barber_shop">Aplicativo Barber Shop</string>
    <string name="txt_delivery">Aplicativo Delivery</string>
    <string name="txt_filmes">Aplicativo de Filmes</string>
    <string name="txt_banco">Aplicativo de Banco</string>
    <string name="txt_musica">Aplicativo de Músicas</string>
    <string name="txt_imc">Aplicativo Calculadora de IMC</string>
    <string name="txt_whatsapp">Aplicativo Lista WhatsApp</string>
    <string name="txt_credit">Aplicativo de Crédito</string>
    <string name="txt_bt_detalhes">Detalhes do Projeto</string>
    <string name="txt_detalhes_fpcalculator">Detalhes do Projeto F.P.Calculator</string>

    <string name="txt_descrição_fpcalculator">

        <b><font color='#000000'> Aplicativo Mobile Criado Utilizando Kotlin, XML, SQLite e FireBase.</font></b>\n\n\n


        <b><font color='#000000'>Projeto: FPCalculator. Mar 2024 – Presente</font></b>\n\n

<font color='#000000'>Desenvolvi um aplicativo para Engenheiros Civis calcularem a profundidade e a capacidade de
carga das estacas de fundação, com base nos resultados dos testes de SPT (Standard
Penetration Test) do solo.\n\n

<b>Principais Responsabilidades:</b>\n\n

• Desenvolvi o back-end usando Kotlin, implementando algoritmos robustos para
cálculos precisos com base nos resultados dos testes de SPT.\n\n

• Desenhei a UI com XML, garantindo uma experiência amigável para o usuário.\n\n

• Integrei o Google Sign-In para autenticação de usuário.\n\n

• Utilizei Firestore Database e Firebase Authentication para registro e autenticação
de usuários.\n\n

• Empreguei SQLite para armazenar e gerenciar localmente os dados dos projetos
calculados pelo aplicativo.\n\n

• Conduzi testes rigorosos para garantir a precisão e confiabilidade dos cálculos.\n\n

• Implementei as melhores práticas em segurança e gerenciamento de dados.\n\n

• Colaborei com profissionais de engenharia civil para validar a funcionalidade e
precisão do aplicativo.\n\n

• Utilizei a IDE Android Studio para desenvolvimento e depuração.\n\n

    • Implementei tratamento de erros e logging para interação contínua do usuário.\n\n</font>

    </string>

</resources>