<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Contato">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_contato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        app:navigationIcon="@drawable/ic_voltar"
        app:title="@string/txt_bt_contato"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_telefone"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:layout_margin="20dp"
        android:drawableStart="@drawable/ic_phone"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_contato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_email"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:drawablePadding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@+id/telefone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_whats_app"
        android:layout_margin="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>