<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Projetos">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_projetos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:navigationIcon="@drawable/ic_voltar"
        app:title="@string/txt_bt_projetos"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/img_barber_shop"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logobarber1"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_projetos"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/txt_barber_shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_barber_shop"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toEndOf="@+id/img_barber_shop"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_projetos"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_dt_barber_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bt_detalhes"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_barber_shop"
        app:layout_constraintStart_toEndOf="@+id/img_barber_shop"
        />

    <ImageView
        android:id="@+id/img_delivery"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/delivery"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/img_barber_shop"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/txt_deliveri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_delivery"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="35dp"
        android:layout_marginStart="150dp"
        app:layout_constraintStart_toEndOf="@+id/img_delivery"
        app:layout_constraintTop_toBottomOf="@+id/bt_dt_barber_shop"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_dt_delivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_bt_detalhes"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:padding="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_deliveri"
        app:layout_constraintStart_toEndOf="@+id/img_delivery"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>